--- a/assets/pug/pages/template/select.pug
+++ b/assets/pug/pages/template/select.pug
@@ -95,7 +95,7 @@ html(lang='en')
                 div.card-body                                   
                   div.tabs-content
                     div(data-tabContent="1" class="tab-pan active show first:rounded-tl-none rounded-5")
-                      div.flex.items-center.flex-col.flex-wrap.gap-2(class="my-2") 
+                      div.flex.items-center.flex-col.flex-wrap.gap-2(class="my-2 dark:bg-sidebar-dark2")
                         div.custom-select.select-style-1.select-bg-white
                           select
                             option(disabled='' selected='') Pick your favorite Simpson
