--- a/html/template/select.html
+++ b/html/template/select.html
@@ -1064,7 +1064,7 @@
                 <div class="card-body">                                  
                   <div class="tabs-content">
                     <div class="tab-pan active show first:rounded-tl-none rounded-5" data-tabContent="1">
-                      <div class="flex items-center flex-col flex-wrap gap-2 my-2"> 
+                      <div class="flex items-center flex-col flex-wrap gap-2 my-2 dark:bg-sidebar-dark2">
                         <div class="custom-select select-style-1 select-bg-white">
                           <select>
                             <option disabled="" selected="">Pick your favorite Simpson</option>
