--- a/assets/pug/pages/template/product.pug
+++ b/assets/pug/pages/template/product.pug
@@ -47,7 +47,7 @@ html(lang='en')
             div.col-span-4(class="xl:col-span-5 md:col-span-12")
               div.product-slider.sticky.top-0
                 div.swiper.productImgNav
-                  div.swiper-wrapper
+                  div.swiper-wrapper 
                     div.swiper-slide
                       img(src="../../assets/images/ecommerce/22.jpg" alt="product")
                     div.swiper-slide
@@ -82,7 +82,7 @@ html(lang='en')
                   span.text-content3.text-xs.leading-none(class="pr-3 border-r border-border-light rtl:border-r-0 rtl:border-l rtl:pr-unset rtl:pl-3") #15704 
                   p.text-title.text-xs.leading-none.font-semibold(class="pr-3 border-r border-border-light rtl:border-r-0 rtl:border-l rtl:pr-unset rtl:pl-3") 
                     span.text-content3.text-xs.leading-none Seller: 
-                    | Backy Fashion              
+                    | Backy Fashion
                   p.text-title.text-xs.leading-none.font-semibold
                     span.text-content3.text-xs.leading-none Available: 
                     | In Stock
@@ -107,14 +107,14 @@ html(lang='en')
                         li.border.border-border-light.rounded-full.text-title.leading-none.w-8.h-8.flex.items-center.justify-center(class="hover:bg-gray-extralight") L
                         li.border.border-border-light.rounded-full.text-title.leading-none.w-8.h-8.flex.items-center.justify-center(class="hover:bg-gray-extralight") XL
                   div.col-span-6(class="lg:col-span-12 md:col-span-6 sm:col-span-12")
-                    div.flex.items-center.gap-3
+                    div.flex.items-center.gap-3 
                       label.text-title.text-sm.font-medium(for="color") Color
                       ul(class="flex flex-wrap items-center gap-2" id="color")
                         li(class="w-6 h-6 rounded-full cursor-pointer bg-light")
                         li(class="w-6 h-6 bg-black rounded-full cursor-pointer")
                         li(class="w-6 h-6 rounded-full cursor-pointer bg-warning")
                         li(class="w-6 h-6 rounded-full cursor-pointer bg-danger")
-                        li(class="w-6 h-6 rounded-full cursor-pointer bg-info")
+                        li(class="w-6 h-6 rounded-full cursor-pointer bg-info") 
                 div.divider.w-full.my-4(class="before:!bg-border-light after:!bg-border-light 2lg:my-3")      
                 div
                   h6.text-title.font-medium Description: 
@@ -128,10 +128,10 @@ html(lang='en')
                       button.tab.tabs-bordered.danger-border.text-xs(data-tabFilter="2" class="tab-link") Detail
                       button.tab.tabs-bordered.danger-border.text-xs(data-tabFilter="3" class="tab-link") Review
                     div.tabs-content
-                      div(data-tabContent="1" class="tab-pan fade active show first:rounded-tl-none rounded-5 border border-border-light !p-4")
+                      div(data-tabContent="1" class="tab-pan fade active show first:rounded-tl-none rounded-5 border border-border-light dark:border-border-dark !p-4")
                         div.overflow-auto.custom-scroll  
                           include ../../components/table/product-detail-table
-                      div(data-tabContent="2" class="tab-pan fade group relative first:rounded-tl-none rounded-5 border border-border-light !p-4")
+                      div(data-tabContent="2" class="tab-pan fade group relative first:rounded-tl-none rounded-5 border border-border-light dark:border-border-dark !p-4")
                         p.text-base.text-title.font-semibold.mb-3 Backy Fashion Women's Leather Bags
                         p.text-content3.text-sm A bag that holds your entire universe! A tote bag is a shoulder bag with parallel handles that might have side panels or not. The exterior is beige and has one main compartment, three total pockets, and a zippered clasp. I use excellent, cruelty-free materials.
                         ul(class="pl-5 mt-3 list-disc") 
@@ -140,9 +140,9 @@ html(lang='en')
                           li.text-xs.font-medium.text-content3 Made in India 
                           li.text-xs.font-medium.text-content3 Leading fashion brand since 30 years
                           li.text-xs.font-medium.text-content3 6 months warranty
-                      div(data-tabContent="3" class="tab-pan fade group relative first:rounded-tl-none rounded-5 border border-border-light !p-4")
+                      div(data-tabContent="3" class="tab-pan fade group relative first:rounded-tl-none rounded-5 border border-border-light dark:border-border-dark !p-4")
                         div.flex.flex-col.gap-0
-                          div.flex.flex-col.gap-3.p-3(class="first:border-b last:pb-0 first:border-border-light first:border-dashed last:border-none")
+                          div.flex.flex-col.gap-3.p-3(class="first:border-b last:pb-0 first:border-border-light dark:border-border-dark first:border-dashed last:border-none")
                             div.flex.items-center.justify-between.gap-2
                               div.flex.items-center.gap-0
                                 i(data-feather="star" class="w-4 h-4 fill-warning stroke-transparent")
@@ -158,7 +158,7 @@ html(lang='en')
                               div
                                 h4(class="text-xs font-semibold text-title") Kitten
                                 span(class="block mt-1 font-semibold text-2xs text-content") California, US
-                          div.flex.flex-col.gap-3.p-3(class="first:border-b last:pb-0 first:border-border-light first:border-dashed last:border-none")
+                          div.flex.flex-col.gap-3.p-3(class="first:border-b last:pb-0 first:border-border-light dark:border-border-dark first:border-dashed last:border-none")
                             div.flex.items-center.justify-between.gap-2
                               div.flex.items-center.gap-0
                                 i(data-feather="star" class="w-4 h-4 fill-warning stroke-transparent")
