--- a/html/template/product.html
+++ b/html/template/product.html
@@ -1007,7 +1007,7 @@
             <div class="col-span-4 xl:col-span-5 md:col-span-12">
               <div class="product-slider sticky top-0">
                 <div class="swiper productImgNav">
-                  <div class="swiper-wrapper">
+                  <div class="swiper-wrapper"> 
                     <div class="swiper-slide"><img src="../../assets/images/ecommerce/22.jpg" alt="product"></div>
                     <div class="swiper-slide"><img src="../../assets/images/ecommerce/23.jpg" alt="product"></div>
                     <div class="swiper-slide"><img src="../../assets/images/ecommerce/24.jpg" alt="product"></div>
@@ -1034,7 +1034,7 @@
                   <h3 class="leading-none mb-3 font-semibold 3xl:flex 3xl:justify-between 3xl:items-center text-title sm:text-base">Women's Latest Bags Collections</h3><a class="p-2 btn hover:dark:bg-sidebar-dark2 hover:bg-gray-light" href="add-product.html"><i class="w-4 h-4 scale-100 stroke-title" data-feather="plus"></i></a>
                 </div>
                 <div class="flex items-center gap-3 mb-3 flex-wrap"><span class="text-content3 text-xs leading-none pr-3 border-r border-border-light rtl:border-r-0 rtl:border-l rtl:pr-unset rtl:pl-3">#15704 </span>
-                  <p class="text-title text-xs leading-none font-semibold pr-3 border-r border-border-light rtl:border-r-0 rtl:border-l rtl:pr-unset rtl:pl-3"> <span class="text-content3 text-xs leading-none">Seller: </span>Backy Fashion              </p>
+                  <p class="text-title text-xs leading-none font-semibold pr-3 border-r border-border-light rtl:border-r-0 rtl:border-l rtl:pr-unset rtl:pl-3"> <span class="text-content3 text-xs leading-none">Seller: </span>Backy Fashion</p>
                   <p class="text-title text-xs leading-none font-semibold"><span class="text-content3 text-xs leading-none">Available: </span>In Stock</p>
                 </div>
                 <div class="flex items-center gap-2 mb-4">
@@ -1058,14 +1058,14 @@
                     </div>
                   </div>
                   <div class="col-span-6 lg:col-span-12 md:col-span-6 sm:col-span-12">
-                    <div class="flex items-center gap-3">
+                    <div class="flex items-center gap-3"> 
                       <label class="text-title text-sm font-medium" for="color">Color</label>
                       <ul class="flex flex-wrap items-center gap-2" id="color">
                         <li class="w-6 h-6 rounded-full cursor-pointer bg-light"></li>
                         <li class="w-6 h-6 bg-black rounded-full cursor-pointer"></li>
                         <li class="w-6 h-6 rounded-full cursor-pointer bg-warning"></li>
                         <li class="w-6 h-6 rounded-full cursor-pointer bg-danger"></li>
-                        <li class="w-6 h-6 rounded-full cursor-pointer bg-info"></li>
+                        <li class="w-6 h-6 rounded-full cursor-pointer bg-info"> </li>
                       </ul>
                     </div>
                   </div>
@@ -1085,7 +1085,7 @@
                       <button class="tab tabs-bordered danger-border text-xs tab-link" data-tabFilter="3">Review</button>
                     </div>
                     <div class="tabs-content">
-                      <div class="tab-pan fade active show first:rounded-tl-none rounded-5 border border-border-light !p-4" data-tabContent="1">
+                      <div class="tab-pan fade active show first:rounded-tl-none rounded-5 border border-border-light dark:border-border-dark !p-4" data-tabContent="1">
                         <div class="overflow-auto custom-scroll"> 
                           <table class="table equal-space">
                             <tbody>
@@ -1109,7 +1109,7 @@
                           </table>
                         </div>
                       </div>
-                      <div class="tab-pan fade group relative first:rounded-tl-none rounded-5 border border-border-light !p-4" data-tabContent="2">
+                      <div class="tab-pan fade group relative first:rounded-tl-none rounded-5 border border-border-light dark:border-border-dark !p-4" data-tabContent="2">
                         <p class="text-base text-title font-semibold mb-3">Backy Fashion Women's Leather Bags</p>
                         <p class="text-content3 text-sm">A bag that holds your entire universe! A tote bag is a shoulder bag with parallel handles that might have side panels or not. The exterior is beige and has one main compartment, three total pockets, and a zippered clasp. I use excellent, cruelty-free materials.</p>
                         <ul class="pl-5 mt-3 list-disc"> 
@@ -1120,9 +1120,9 @@
                           <li class="text-xs font-medium text-content3">6 months warranty</li>
                         </ul>
                       </div>
-                      <div class="tab-pan fade group relative first:rounded-tl-none rounded-5 border border-border-light !p-4" data-tabContent="3">
+                      <div class="tab-pan fade group relative first:rounded-tl-none rounded-5 border border-border-light dark:border-border-dark !p-4" data-tabContent="3">
                         <div class="flex flex-col gap-0">
-                          <div class="flex flex-col gap-3 p-3 first:border-b last:pb-0 first:border-border-light first:border-dashed last:border-none">
+                          <div class="flex flex-col gap-3 p-3 first:border-b last:pb-0 first:border-border-light dark:border-border-dark first:border-dashed last:border-none">
                             <div class="flex items-center justify-between gap-2">
                               <div class="flex items-center gap-0"><i class="w-4 h-4 fill-warning stroke-transparent" data-feather="star"></i><i class="w-4 h-4 fill-warning stroke-transparent" data-feather="star"></i><i class="w-4 h-4 fill-warning stroke-transparent" data-feather="star"></i><i class="w-4 h-4 fill-warning stroke-transparent" data-feather="star"></i><i class="w-4 h-4 fill-content stroke-transparent" data-feather="star"></i></div><span class="text-xs text-content3 font-medium">06 Feb, 2023 </span>
                             </div>
@@ -1135,7 +1135,7 @@
                               </div>
                             </div>
                           </div>
-                          <div class="flex flex-col gap-3 p-3 first:border-b last:pb-0 first:border-border-light first:border-dashed last:border-none">
+                          <div class="flex flex-col gap-3 p-3 first:border-b last:pb-0 first:border-border-light dark:border-border-dark first:border-dashed last:border-none">
                             <div class="flex items-center justify-between gap-2">
                               <div class="flex items-center gap-0"><i class="w-4 h-4 fill-warning stroke-transparent" data-feather="star"></i><i class="w-4 h-4 fill-warning stroke-transparent" data-feather="star"></i><i class="w-4 h-4 fill-warning stroke-transparent" data-feather="star"></i><i class="w-4 h-4 fill-warning stroke-transparent" data-feather="star"></i><i class="w-4 h-4 fill-warning stroke-transparent" data-feather="star"></i></div><span class="text-xs text-content3 font-medium">24 Jan, 2023 </span>
                             </div>
