--- a/assets/pug/pages/template/blog-detail.pug
+++ b/assets/pug/pages/template/blog-detail.pug
@@ -47,34 +47,19 @@ html(lang='en')
                 select.form-select.block.w-full.px-3.text-xs.font-normal.text-content3.bg-white.bg-clip-padding.bg-no-repeat.border.border-border-light.rounded-5.transition.ease-in-out.m-0(class='min-w-[150px] 2md:min-w-[130px] py-[9px] dark:border-border-dark dark:bg-sidebar-dark2' id="sortby" aria-label='Default select example')
                   option(selected='') All 
                   option(value='1') Popular 
-<<<<<<< Updated upstream
-                  option(value='2') Price Low 
+                  option(value='2') Price Low
                   option(value='3') Price Hight 
               div.flex.items-center.gap-3 
-                div.search-box.relative(class="2md:hidden") 
-                  input(class="rounded-5 w-full py-[11px] pl-[25px] pr-[55px] rtl:pr-[25px] rtl:pl-[55px] text-xs font-semibold text-title dark:text-white dark:bg-sidebar-dark2 border border-border-light dark:border-border-dark" placeholder="Type to Search..." type="search")       
-=======
-                  option(value='2') Price Low
-                  option(value='3') Price Hight  
-              div.flex.items-center.gap-3  
                 div.search-box.relative(class="2md:hidden")
-                  input(class="rounded-5 w-full py-[11px] pl-[25px] pr-[55px] rtl:pr-[25px] rtl:pl-[55px] dark:!bg-sidebar-dark2 text-xs font-semibold text-title border border-border-light dark:border-border-dark dark:text-white" placeholder="Type to Search..." type="search")       
->>>>>>> Stashed changes
+                  input(class="rounded-5 w-full py-[11px] pl-[25px] pr-[55px] rtl:pr-[25px] rtl:pl-[55px] text-xs font-semibold text-title border border-border-light dark:border-border-dark" placeholder="Type to Search..." type="search")       
                   +SVG_ICON("Search","w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title top-1/2 -translate-y-1/2 right-[25px] rtl:right-unset rtl:left-[25px] absolute dark:stroke-white")
-                button 
+                button
                   +SVG_ICON("Search","2md:flex hidden w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title dark:stroke-white")
-<<<<<<< Updated upstream
                 div.product-filter(class="hidden cursor-pointer lg:flex") 
                   +SVG_ICON("Filter", "w-6 h-6 stroke-content3 blog-toggle lg:block hidden")
 
             div.col-span-3(class="4xl:col-span-4 blog-sidebar lg:w-[290px] sm:w-[280px]")
               div.card.sticky.top-0
-=======
-                div.product-filter.left-sidebar-hide-logo-show(class="hidden cursor-pointer lg:flex")
-                  +SVG_ICON("Filter", "w-6 h-6 stroke-content3 left-sidebar-toggle-btn lg:block hidden") 
-            div.col-span-3(class="4xl:col-span-4 lg:col-span-12 lg:hidden")
-              div.card.sticky.top-0.left-sidebar-aside(class="z-[4] lg:z-[6] lg:!absolute")
->>>>>>> Stashed changes
                 div.card-header.border-b-0
                   button(class="justify-end hidden mb-3 lg:flex absolute blog-close-sidebar right-[-50px] top-[-16px] bg-gray-light p-2 ")   
                     i(data-feather="x" class="w-5 h-5 stroke-title")
