--- a/html/template/blog-grid.html
+++ b/html/template/blog-grid.html
@@ -463,17 +463,10 @@
                       </div>
                     </div>
                   </li>
-<<<<<<< Updated upstream
-                  <li class="dropdown on-hover-show cursor-pointer pb-[6px] transition-all duration-300 relative group before:bg-primary before:absolute before:-translate-x-1/2 before:bottom-0 before:left-1/2 hover:before:w-full before:h-[2px] before:w-0 "> <span class="text-xs font-bold transition-all duration-300 text-content group-hover:text-primary">Components</span>
-                    <div class="dropdown-menu !min-w-[220px] !left-0 !right-unset rtl:!left-unset rtl:!right-0"> 
-                      <!-- Componant menu-->
-                      <ul class="flex flex-col gap-4"> 
-=======
                   <li class="dropdown on-hover-show cursor-pointer pb-[6px] transition-all duration-300 relative group before:bg-primary before:absolute before:-translate-x-1/2 before:bottom-0 before:left-1/2 hover:before:w-full before:h-[2px] before:w-0 "> <span class="text-xs font-bold transition-all duration-300 text-content group-hover:text-primary">Components </span>
                     <div class="dropdown-menu !min-w-[220px] !left-0 !right-unset rtl:!left-unset rtl:!right-[4.625rem] "> 
                       <!-- Componant menu-->
                       <ul class="flex flex-col gap-4 "> 
->>>>>>> Stashed changes
                         <li class="w-full dropdown on-hover-show group"><a class="flex items-center justify-between gap-2" href="javascript:void(0)"><span class="flex items-center gap-2">
                               <svg class="w-5 h-5 stroke-title"> 
                                 <use href="../../assets/svg/sprite.svg#Folder"> </use>
@@ -481,11 +474,7 @@
                             <svg class="w-4 h-4 stroke-title ml-auto"> 
                               <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                             </svg></a>
-<<<<<<< Updated upstream
                           <div class="dropdown-menu dropdown-sub-menu rtl:!left-unset rtl:!right-[24.938rem]">
-=======
-                          <div class="dropdown-menu dropdown-sub-menu">
->>>>>>> Stashed changes
                             <ul class="flex flex-col gap-2"> 
                               <li><a href="./alert.html">Alert</a></li>
                               <li><a href="./avatars.html">Avatars</a></li>
@@ -508,11 +497,7 @@
                             <svg class="w-4 h-4 stroke-title ml-auto"> 
                               <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                             </svg></a>
-<<<<<<< Updated upstream
                           <div class="dropdown-menu dropdown-sub-menu rtl:!left-unset rtl:!right-[24.938rem]">
-=======
-                          <div class="dropdown-menu dropdown-sub-menu">
->>>>>>> Stashed changes
                             <ul class="flex flex-col gap-2"> 
                               <li><a href="./breadcrumb.html">Breadcrumb</a></li>
                               <li><a href="./carousel.html">Carousel</a></li>
@@ -537,11 +522,7 @@
                             <svg class="w-4 h-4 stroke-title ml-auto"> 
                               <use href="../../assets/svg/sprite.svg#Arrow-Right-2"> </use>
                             </svg></a>
-<<<<<<< Updated upstream
                           <div class="dropdown-menu dropdown-sub-menu rtl:!left-unset rtl:!right-[24.938rem]">
-=======
-                          <div class="dropdown-menu dropdown-sub-menu">
->>>>>>> Stashed changes
                             <ul class="flex flex-col gap-2"> 
                               <li><a href="./feather.html">Feather</a></li>
                               <li><a href="./fontawesome.html">Font Awesome</a></li>
@@ -563,11 +544,7 @@
                     </div>
                   </li>
                   <li class="dropdown on-hover-show cursor-pointer pb-[6px] transition-all duration-300 relative group before:bg-primary before:absolute before:-translate-x-1/2 before:bottom-0 before:left-1/2 hover:before:w-full before:h-[2px] before:w-0 "> <span class="text-xs font-bold transition-all duration-300 text-content group-hover:text-primary">Applications</span>
-<<<<<<< Updated upstream
-                    <div class="dropdown-menu !min-w-[190px] !left-0 !right-unset rtl:!left-unset rtl:!right-0"> 
-=======
                     <div class="dropdown-menu !min-w-[190px] !left-0 !right-unset rtl:!left-unset rtl:!right-0">
->>>>>>> Stashed changes
                       <!-- App Menu -->
                       <ul class="flex flex-col gap-3"> 
                         <li class="w-full dropdown on-hover-show group"><a class="flex items-center gap-2" href="javascript:void(0)"><span class="flex items-center gap-2">
@@ -1039,32 +1016,19 @@
         <!-- Page Body Start -->
         <div class="page-body">
           <div class="grid grid-cols-12 gap-card-gap">
-<<<<<<< Updated upstream
             <div class="col-span-12 flex items-center justify-between gap-3 bg-white p-3 rounded-5 dark:bg-sidebar-dark"> 
               <div class="flex items-center gap-3"> 
                 <label class="text-xs min-w-max text-content3" for="sortby">Sort By                                    </label>
                 <select class="form-select block w-full px-3 text-xs font-normal text-content3 bg-white bg-clip-padding bg-no-repeat border border-border-light rounded-5 transition ease-in-out m-0 min-w-[150px] 2md:min-w-[130px] py-[9px] dark:border-border-dark dark:bg-sidebar-dark2" id="sortby" aria-label="Default select example">
                   <option selected="">All </option>
-=======
-            <div class="col-span-12 flex items-center justify-between gap-3 bg-white p-3 rounded-5 2sm:flex-col 2sm:items-end dark:bg-sidebar-dark"> 
-              <div class="flex items-center gap-3"> 
-                <label class="text-xs min-w-max text-content3" for="sortby">Sort By                                    </label>
-                <select class="form-select block w-full px-3 text-xs font-normal text-content3 bg-white bg-clip-padding bg-no-repeat border border-border-light rounded-5 transition ease-in-out m-0 min-w-[150px] py-[9px] dark:border-border-dark dark:bg-sidebar-dark2 " id="sortby" aria-label="Default select example">
-                  <option selected="">All  </option>
->>>>>>> Stashed changes
                   <option value="1">Popular </option>
                   <option value="2">Price Low</option>
                   <option value="3">Price Hight </option>
                 </select>
               </div>
               <div class="flex items-center gap-3"> 
-<<<<<<< Updated upstream
                 <div class="search-box relative 2md:hidden">
-                  <input class="rounded-5 w-full py-[11px] pl-[25px] pr-[55px] rtl:pr-[25px] rtl:pl-[55px] text-xs font-semibold text-title dark:text-white dark:bg-sidebar-dark2 border border-border-light dark:border-border-dark" placeholder="Type to Search..." type="search">
-=======
-                <div class="search-box relative 2md:hidden"> 
-                  <input class="rounded-5 w-full py-[11px] pl-[25px] pr-[55px] rtl:pr-[25px] dark:bg-sidebar-dark2 rtl:pl-[55px] text-xs font-semibold text-title border border-border-light dark:border-border-dark dark:text-white" placeholder="Type to Search..." type="search">
->>>>>>> Stashed changes
+                  <input class="rounded-5 w-full py-[11px] pl-[25px] pr-[55px] rtl:pr-[25px] rtl:pl-[55px] text-xs font-semibold text-title border border-border-light dark:border-border-dark" placeholder="Type to Search..." type="search">
                   <svg class="w-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] h-[calc(18px_+_(24_-_18)_*_((100vw_-_320px)_/_(1920_-_320)))] stroke-title top-1/2 -translate-y-1/2 right-[25px] rtl:right-unset rtl:left-[25px] absolute dark:stroke-white"> 
                     <use href="../../assets/svg/sprite.svg#Search"> </use>
                   </svg>
@@ -1074,29 +1038,17 @@
                     <use href="../../assets/svg/sprite.svg#Search"> </use>
                   </svg>
                 </button>
-<<<<<<< Updated upstream
                 <div class="product-filter hidden cursor-pointer lg:flex"> 
                   <svg class="w-6 h-6 stroke-content3 lg:block hidden blog-toggle"> 
-=======
-                <div class="product-filter left-sidebar-hide-logo-show hidden cursor-pointer lg:flex"> 
-                  <svg class="w-6 h-6 stroke-content3 left-sidebar-toggle-btn lg:block hidden"> 
->>>>>>> Stashed changes
                     <use href="../../assets/svg/sprite.svg#Filter"> </use>
                   </svg>
                 </div>
               </div>
             </div>
-<<<<<<< Updated upstream
             <div class="col-span-3 2xl:col-span-4 blog-sidebar lg:w-[290px] sm:w-[280px]">
               <div class="card sticky top-0">
                 <div class="card-header border-b-0">
                   <button class="justify-end hidden mb-3 lg:flex blog-close-sidebar absolute right-[-50px] top-[-16px] bg-gray-light p-2 ">  <i class="w-5 h-5 stroke-title" data-feather="x"></i></button>
-=======
-            <div class="col-span-3 2xl:col-span-4 lg:col-span-12 lg:hidden">
-              <div class="card sticky top-0 left-sidebar-aside z-[4] lg:z-[6] lg:!absolute">
-                <div class="card-header border-b-0">
-                  <button class="justify-end hidden mb-3 lg:flex left-sidebar-toggle absolute right-[-50px] top-[-16px] bg-gray-light p-2 ">  <i class="w-5 h-5 stroke-title" data-feather="x"></i></button>
->>>>>>> Stashed changes
                   <div class="search-box relative">
                     <input class="rounded-full bg-gray-light dark:bg-sidebar-dark2 dark:text-white w-full py-[.6875rem] pl-[1.5625rem] pr-[3.4375rem] text-xs font-semibold text-title" placeholder="Type to Search..." type="search">
                     <svg class="w-6 h-6 stroke-title dark:stroke-white top-1/2 -translate-y-1/2 right-[1.5625rem] absolute"> 
@@ -1429,7 +1381,6 @@
           <ul class="flex flex-col gap-7 mode-event">
             <li> 
               <div>
-<<<<<<< Updated upstream
                 <h5 class="leading-none text-dark text-sm font-semibold dark:text-white">Template Mode</h5><span class="leading-none text-content text-xs font-medium">Choose template mode dark & light</span>
               </div>
               <div class="mt-2"> 
@@ -1441,26 +1392,12 @@
                   <li class="relative">
                     <input class="absolute invisible opacity-0 peer" id="dark-checked" type="radio" name="mode"><i class="stroke-white z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
                     <label class="block overflow-hidden border shadow-md mode-theme-dark border-light dark:border-border-dark rounded-5" for="dark-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/dark.png" alt="dark"></label>
-=======
-                <h5 class="leading-none text-dark text-sm font-semibold">Template Mode</h5><span class="leading-none text-content text-xs font-medium">Choose template mode dark & light</span>
-              </div>
-              <div class="mt-2">
-                <ul class="flex items-center gap-3 flex-wrap"> 
-                  <li class="relative">
-                    <input class="absolute invisible opacity-0 peer" checked id="light-checked" type="radio" name="mode"><i class="stroke-primary z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
-                    <label class="block overflow-hidden border shadow-md mode-theme-light border-light rounded-5" for="light-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/light.png" alt="light"></label>
-                  </li>
-                  <li class="relative">
-                    <input class="absolute invisible opacity-0 peer" id="dark-checked" type="radio" name="mode"><i class="stroke-white z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
-                    <label class="block overflow-hidden border shadow-md mode-theme-dark border-light rounded-5" for="dark-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/dark.png" alt="dark"></label>
->>>>>>> Stashed changes
                   </li>
                 </ul>
               </div>
             </li>
             <li>
               <div>
-<<<<<<< Updated upstream
                 <h5 class="leading-none text-dark text-sm font-semibold dark:text-white">Layout Type</h5><span class="leading-none text-content text-xs">Choose layout Ltr & Rtl</span>
               </div>
               <div class="mt-2">
@@ -1472,30 +1409,13 @@
                   <li class="relative"> 
                     <input class="absolute invisible opacity-0 peer" id="rtl-checked" type="radio" name="dir"><i class="stroke-white z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
                     <label class="block overflow-hidden border shadow-md layout-rtl border-light dark:border-border-dark rounded-5" for="rtl-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/rtl.png" alt="rtl"></label>
-=======
-                <h5 class="leading-none text-dark text-sm font-semibold">Layout Type</h5><span class="leading-none text-content text-xs">Choose layout Ltr & Rtl</span>
-              </div>
-              <div class="mt-2">
-                <ul class="flex items-center gap-3">
-                  <li class="relative">
-                    <input class="absolute invisible opacity-0 peer" checked id="ltr-checked" type="radio" name="dir"><i class="stroke-primary z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
-                    <label class="block overflow-hidden border shadow-md layout-ltr border-light rounded-5" for="ltr-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/ltr.png" alt="ltr"></label>
-                  </li>
-                  <li class="relative"> 
-                    <input class="absolute invisible opacity-0 peer" id="rtl-checked" type="radio" name="dir"><i class="stroke-white z-[10] transition-all scale-0 opacity-0 absolute peer-checked:opacity-100 peer-checked:scale-100 top-2 right-2 w-4 h-4" data-feather="check-circle"></i>
-                    <label class="block overflow-hidden border shadow-md layout-rtl border-light rounded-5" for="rtl-checked"> <img class="w-[90px] object-cover" src="../../assets/images/customizer/rtl.png" alt="rtl"></label>
->>>>>>> Stashed changes
                   </li>
                 </ul>
               </div>
             </li>
             <li>
               <div>
-<<<<<<< Updated upstream
                 <h5 class="leading-none text-dark text-sm font-semibold dark:text-white">Sidebar Type</h5><span class="leading-none text-content text-xs">Choose Sidebar  icon & full</span>
-=======
-                <h5 class="leading-none text-dark text-sm font-semibold">Sidebar Type</h5><span class="leading-none text-content text-xs">Choose Sidebar  icon & full</span>
->>>>>>> Stashed changes
               </div>
               <div class="mt-2">
                 <ul class="flex items-center gap-3">
@@ -1512,11 +1432,7 @@
             </li>
             <li>
               <div class="flex items-center justify-between"> <span class="dark:text-white text-sm font-semibold text-title">Monochrome Mode </span>
-<<<<<<< Updated upstream
                 <label class="inline-flex relative items-center cursor-pointer">
-=======
-                <label class="inline-flex relative items-center cursor-pointer"> 
->>>>>>> Stashed changes
                   <input class="sr-only peer monochrome toggle toggle-primary" name="monochrome" type="checkbox" id="monochrome"><span class="w-7 h-4 bg-content rounded-full peer peer-focus:outline-none peer-checked:after:translate-x-full peer-checked:after:content-white after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border-gray-light after:border after:rounded-full after:h-3 after:w-3 after:transition-all peer-checked:bg-primary"></span>
                 </label>
               </div>
@@ -1524,13 +1440,8 @@
           </ul>
         </div>
       </div>
-<<<<<<< Updated upstream
       <div class="flex items-center gap-2 p-[15px] border-t border-light dark:bg-primaryLight dark:border-t dark:border-border-dark "> 
         <button class="btn btn-ghost flex-1 reset-customizer dark:!bg-sidebar-dark dark:text-white">Reset </button>
-=======
-      <div class="flex items-center gap-2 p-[15px] border-t border-light dark:bg-primaryLight dark:border-t dark:border-border-dark"> 
-        <button class="btn btn-ghost flex-1 reset-customizer dark:!bg-sidebar-dark">Reset  </button>
->>>>>>> Stashed changes
         <button class="btn btn-primary text-white flex-1">Buy Now</button>
       </div>
     </div>
